feat(core): runtime txs for md/mdx
