# packages/api/spec/openapi.json
@@ -224,6 +224,9 @@
                           "required": ["before", "target", "after"]
                         }
                       }
+                    },
+                    "fileFormat": {
+                      "$ref": "#/components/schemas/RuntimeFileFormat"
                     }
                   },
                   "default": {
@@ -352,6 +355,10 @@
           }
         },
         "required": ["message"]
+      },
+      "RuntimeFileFormat": {
+        "type": "string",
+        "enum": ["MD", "MDX"]
       }
     },
     "parameters": {}
