# packages/core/src/id/types.ts
@@ -1,4 +1,5 @@
 import type { DataFormat } from '@generaltranslation/format/types';
+import type { RuntimeFileFormat } from '../types-dir/api/entry';
 
 export type HashMetadata = {
   context?: string;
@@ -11,4 +12,5 @@ export type HashMetadata = {
   maxChars?: number;
   requiresReview?: boolean;
   dataFormat?: DataFormat;
+  fileFormat?: RuntimeFileFormat;
 };
